--- a/zsh-functions.in
+++ b/zsh-functions.in
@@ -3,20 +3,12 @@
 # SC2016: Single quotes are used explicitly to ignore parameter expansion.
 # SC2046: shellcheck is too quote conservative.
 # SC2048: shellcheck is too quote conservative.
-# SC2046: shellcheck is too quote conservative.
-# SC2048: shellcheck is too quote conservative.
 # SC2086: All instances of params are quoted where they need to be.
 # SC2116: Not a "Useless echo", we need it to expand the params correctly.
 # SC2128: shellcheck thinks ${query} is an array because of a previous local declaration.
 # SC2154: Used but not assigned: these values are set by the shell.
 # SC2155: Ignoring all return values in assignments.
 # SC2190: ZSH: associative array assignment "just works"(TM).
-# SC2207: "prefer mapfile or read -a" these are all ZSH-isms.
-# SC2248: shellcheck is too quote conservative.
-# SC2296: ZSH permits bracketed parameter expansions starting with ().
-# SC2298: ZSH permits nested parameter expansions.
-# SC2299: ZSH permits nested parameter expansions.
-# SC2312: No need to invoke commands separately.
 # SC2207: "prefer mapfile or read -a" these are all ZSH-isms.
 # SC2248: shellcheck is too quote conservative.
 # SC2296: ZSH permits bracketed parameter expansions starting with ().
@@ -44,12 +36,9 @@ zmodload zsh/datetime
   vLibRelease=0
   vLibMajor=0
   vLibMinor=2
-  vLibPatch=23
+  vLibPatch=24
   vLibHash='$Hash$'
 }
-
-# zsh_library_version returns a string containing a "dotted quad" of this
-# library's version number.
 
 # zsh_library_version returns a string containing a "dotted quad" of this
 # library's version number.
@@ -60,17 +49,8 @@ function zsh_library_version() {
          "${vLibMinor}" \
          "${vLibPatch}" \
 	 "${${${vLibHash#*Hash: }//\$/}/Hash/prerelease}"
-         "${vLibPatch}" \
-	 "${${${vLibHash#*Hash: }//\$/}/Hash/prerelease}"
 }
 
-# sendNotification use the configured mailer to send email to one or more
-# addresses. This prefers to use msmtp(1). It will use postfix(1)'s sendmail if
-# msmtp is not found and if /etc/postfix/main.cf exists and has a "relayhost"
-# parameter configured.
-#
-# sendNotification sends no more than one notification for each type in 24 hours
-# (and let the recipients know that they will see no more than one per day).
 # sendNotification use the configured mailer to send email to one or more
 # addresses. This prefers to use msmtp(1). It will use postfix(1)'s sendmail if
 # msmtp is not found and if /etc/postfix/main.cf exists and has a "relayhost"
@@ -623,6 +603,30 @@ function rdListCuts() {
   return "${returnValue}"
 }
 
+# rdListCut uses the Rivendell Web API to list the contents of the named
+# Cart and Cut.
+function rdListCut() {
+  local -r cart_number="${1}"
+  shift
+  local -r cut_number="${1}"
+  shift
+  local -r verbose="${1:-0}"
+
+  local -r command=8
+  local -a curlArguments
+  local result
+  local returnValue
+
+  # Command 22: ListLog, NAME: The name of the log
+  curlArguments=( "CART_NUMBER=${cart_number}" "CUT_NUMBER=${cut_number}" )
+
+  result=$(rdWebInvoke "${verbose}" "${command}" ${curlArguments[*]})
+  returnValue="${?}"
+
+  echo "${result}"
+  return "${returnValue}"
+}
+
 # rdDropCart uses the Rivendell Web API to delete the Cart, all its Cuts, and
 # the actual audio file for the specified Cart.
 function rdDropCart() {
@@ -683,6 +687,28 @@ function rdListServices() {
   # List Services: Command 21: ListServices
   # BUG ALERT: this code depends on the Rivendell username 'user' existing with NO password.
   curlArguments=( "TRACKABLE=${trackable}" )
+
+  result=$(rdWebInvoke "${verbose}" "${command}" ${curlArguments[*]})
+  returnValue="${?}"
+
+  echo "${result}"
+  return "${returnValue}"
+}
+
+# rdListLog uses the Rivendell Web API to list all the contents of the named
+# Log.
+function rdListLog() {
+  local -r log_name="${1}"
+  shift
+  local -r verbose="${1:-0}"
+
+  local -r command=22
+  local -a curlArguments
+  local result
+  local returnValue
+
+  # Command 22: ListLog, NAME: The name of the log
+  curlArguments=( "NAME=${log_name}" )
 
   result=$(rdWebInvoke "${verbose}" "${command}" ${curlArguments[*]})
   returnValue="${?}"
@@ -903,7 +929,6 @@ function rdCreateEmptyCart() {
   return "${returnValue}"
 }
 
-# rdDropboxStatus determines the dropbox status for all dropboxes on this host.
 # rdDropboxStatus determines the dropbox status for all dropboxes on this host.
 function rdDropboxStatus() {
   local -r myName="${1}" ; shift
